{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 30,
  "lineage": "b5acf1ef-5044-65d8-bcad-aa6aa36ed500",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:952813204183:vpc/vpc-01b5fae3622893df8",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0329ee39dc44b404d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-09446a897d4b72531",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01b5fae3622893df8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-072f5ad73287ca9ef",
            "owner_id": "952813204183",
            "tags": {
              "Name": "default-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "rancher-listener1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:952813204183:listener/app/petclinic-rancher-alb/30ce066c082b7474/3a21b31c6f9c4029",
            "certificate_arn": "arn:aws:acm:us-east-1:952813204183:certificate/327db5dc-1ba0-4522-9b9c-86d903991a87",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:952813204183:targetgroup/clarus-rancher-http-80-tg/c46c9cdec1c991f0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:952813204183:listener/app/petclinic-rancher-alb/30ce066c082b7474/3a21b31c6f9c4029",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:952813204183:loadbalancer/app/petclinic-rancher-alb/30ce066c082b7474",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.rancher-tg",
            "aws_lb.rancher-alb",
            "aws_security_group.rancher-alb",
            "data.aws_acm_certificate.cert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "rancher-listener2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:952813204183:listener/app/petclinic-rancher-alb/30ce066c082b7474/709b6f004d1f9abf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:952813204183:listener/app/petclinic-rancher-alb/30ce066c082b7474/709b6f004d1f9abf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:952813204183:loadbalancer/app/petclinic-rancher-alb/30ce066c082b7474",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.rancher-alb",
            "aws_security_group.rancher-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "rancher-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:952813204183:targetgroup/clarus-rancher-http-80-tg/c46c9cdec1c991f0",
            "arn_suffix": "targetgroup/clarus-rancher-http-80-tg/c46c9cdec1c991f0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:952813204183:targetgroup/clarus-rancher-http-80-tg/c46c9cdec1c991f0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "clarus-rancher-http-80-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01b5fae3622893df8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "rancher-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:952813204183:targetgroup/clarus-rancher-http-80-tg/c46c9cdec1c991f0-20240404095206121800000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:952813204183:targetgroup/clarus-rancher-http-80-tg/c46c9cdec1c991f0",
            "target_id": "i-0d51f24fc767d0fc0"
          },
          "dependencies": [
            "aws_alb_target_group.rancher-tg",
            "aws_iam_instance_profile.profile_for_rancher",
            "aws_iam_role.role_for_rancher",
            "aws_instance.tf-rancher-server",
            "aws_key_pair.generated_key",
            "aws_security_group.rancher-alb",
            "aws_security_group.tf-rancher-sec-gr",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf-rancher-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d9b9ddc6cd8dd30",
            "arn": "arn:aws:ec2:us-east-1:952813204183:instance/i-0d51f24fc767d0fc0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "petclinic_role_rancher",
            "id": "i-0d51f24fc767d0fc0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "petclinic-rancher",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c96f93d6d091262d",
            "private_dns": "ip-172-31-96-219.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.96.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0303f4151a3217ecf",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "rancher-server-sec-gr"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041ad93e9eb765553",
            "tags": {
              "Name": "petclinic-rancher-server",
              "kubernetes.io/cluster/petclinic-Rancher": "owned"
            },
            "tags_all": {
              "Name": "petclinic-rancher-server",
              "kubernetes.io/cluster/petclinic-Rancher": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c244451e3cc9a300"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.profile_for_rancher",
            "aws_iam_role.role_for_rancher",
            "aws_key_pair.generated_key",
            "aws_security_group.rancher-alb",
            "aws_security_group.tf-rancher-sec-gr",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "rancher-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:952813204183:loadbalancer/app/petclinic-rancher-alb/30ce066c082b7474",
            "arn_suffix": "app/petclinic-rancher-alb/30ce066c082b7474",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "petclinic-rancher-alb-758245035.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:952813204183:loadbalancer/app/petclinic-rancher-alb/30ce066c082b7474",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "petclinic-rancher-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d5008e4f14480450"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01db084a37a9cf937"
              },
              {
                "subnet_id": "subnet-0512516c2e17f346d"
              },
              {
                "subnet_id": "subnet-0ccc5b6d1341b392f"
              }
            ],
            "subnets": [
              "subnet-01db084a37a9cf937",
              "subnet-0512516c2e17f346d",
              "subnet-0ccc5b6d1341b392f"
            ],
            "vpc_id": "vpc-01b5fae3622893df8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.rancher-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rancher-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:952813204183:security-group/sg-0d5008e4f14480450",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5008e4f14480450",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "petclinicdt-rancher-alb-sec-gr",
            "name_prefix": "",
            "owner_id": "952813204183",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinicdt-rancher-alb-sec-gr",
              "kubernetes.io/cluster/petclinic-Rancher": "owned"
            },
            "tags_all": {
              "Name": "petclinicdt-rancher-alb-sec-gr",
              "kubernetes.io/cluster/petclinic-Rancher": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5fae3622893df8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-rancher-sec-gr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:952813204183:security-group/sg-0c244451e3cc9a300",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2376,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2376
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "35.167.242.46/32",
                  "52.33.59.17/32",
                  "35.160.43.145/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0c244451e3cc9a300",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d5008e4f14480450"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rancher-server-sec-gr",
            "name_prefix": "",
            "owner_id": "952813204183",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rancher-server-sec-gr",
              "kubernetes.io/cluster/petclinic-Rancher": "owned"
            },
            "tags_all": {
              "Name": "rancher-server-sec-gr",
              "kubernetes.io/cluster/petclinic-Rancher": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5fae3622893df8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rancher-alb"
          ]
        }
      ]
    }
  ]
}